fixed contrast issue with link

--- a/portal_styles.css
+++ b/portal_styles.css
@@ -56,6 +56,8 @@ footer .lastupdate {
   margin-top: -8px;
 }
 
-footer a {
+footer a:visited,
+footer a:link,
+footer a:hover {
   color: black;
 }
